This reverses the previous commit which proved not to solve the problem in all cases. It also solves the bug for the overlapping menus but it isn't the most elegant solution.

--- a/dt-assets/scss/_main.scss
+++ b/dt-assets/scss/_main.scss
@@ -158,6 +158,7 @@ nav.second-bar {
     padding: 0.5em;
     background-color: white;
     width: 100%;
+    top: auto !important;
 
     .breadcrumbs {
         margin-bottom: 0;
