--- a/dt-assets/scss/_settings.scss
+++ b/dt-assets/scss/_settings.scss
@@ -90,7 +90,7 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 672px,
+  medium: 640px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
